vlib/v/checker/tests/unimplemented_interface_a.vv
interface Animal {
	name() string
}

struct Cat {}

fn foo(_ Animal) {}

fn main() {
	foo(Cat{})
}
